--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,8 @@ h2 {
     color: #D2386C;
 }
 
-/* Limit Information */
-#limitinfo {
+/* Solution Information */
+#solution {
     font-size: 1.5rem;
     color: #009B77;
     padding: 1.2rem;
